--- a/TradeBash/src/TradeBash.Web/Views/Home/Index.cshtml
+++ b/TradeBash/src/TradeBash.Web/Views/Home/Index.cshtml
@@ -4,6 +4,12 @@
 
 <div class="row">
     <div class="col-md-6">
+        <h2>To Do Items (MVC)</h2>
+        <ul>
+            <li><a href="/swagger">API Documentation (Swagger)</a></li>
+        </ul>
+    </div>
+    <div class="col-md-6">
         <h2>About the Author</h2>
         <ul>
             <li><a href="https://ardalis.com">Blog - Ardalis.com</a></li>
