--- a/TradeBash/src/TradeBash.Web/Views/Home/Index.cshtml
+++ b/TradeBash/src/TradeBash.Web/Views/Home/Index.cshtml
@@ -1,20 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Clean DDD Architecture Sample";
-}
-
-<div class="row">
+﻿<div class="row">
     <div class="col-md-6">
-        <h2>To Do Items (MVC)</h2>
+        <h2>API Documentation</h2>
         <ul>
             <li><a href="/swagger">API Documentation (Swagger)</a></li>
         </ul>
     </div>
     <div class="col-md-6">
-        <h2>About the Author</h2>
-        <ul>
-            <li><a href="https://ardalis.com">Blog - Ardalis.com</a></li>
-            <li><a href="https://twitter.com/ardalis">Twitter - @@ardalis</a></li>
-            <li><a href="https://github.com/ardalis">GitHub</a></li>
-        </ul>
     </div>
 </div>
